spent time fixing the side scrilling whitespace issue which arose after resuming coding, however i think it was a google chrome dev tools glitch and i didnt change any code and it worked again, noted for future implementation of bugs section of readme if the issue persists

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,8 @@ body {
     background-color: white;
     box-sizing: border-box;
     font-family: 'Alfa Slab One', cursive;
+    /* margin: 0;
+    padding: 0; */
 }
 
 section {
@@ -233,15 +235,6 @@ footer {
     padding: 20px;
     text-align: center;
     position: relative;
-}
-
-.close {
-    position: absolute;
-    top: 0;
-    right: 15px;
-    font-size: 30px;
-    transform: rotate(45deg);
-    cursor: pointer;
 }
 
 /* media queries*/
